# demo-SdlFramework

./: .gitignore  CMakeLists.txt  README.md  aarch32rpi_toolchain.cmake  cross_arm32elf_toolchain.cmake  linux_mingwx86pe_toolchain.cmake  mingw32_gcc_makefile.bat  mingw64_gcc_makefile.bat  msvc32_clang_makefile.bat  msvc32_clang_ninja.bat  win32_clang_makefile.bat  win32_clang_ninja.bat  win_arrch32rpi_cross_makefile.bat
assets/: psv_template.xml
script/: config_linux.sh  config_linux_arm32.sh  config_linux_mingw_x86.sh  config_linux_x86.sh  cross_a32elf.sh  cross_arm32elf_makefile.sh  cross_psv.sh  cross_psv_makefile.sh  cross_web.sh  linux_mingwx64pe_gcc_makefile.sh  linux_mingwx86pe_gcc_makefile.sh  linux_x64elf_gcc_makefile.sh  linux_x86elf_gcc_makefile.sh  local_linux64.sh  local_mingw32.sh  local_mingw64.sh  local_win32.bat  local_win64.bat  win_mingwx64pe_gcc_makefile.bat  win_mingwx86pe_gcc_makefile.bat  win_msvcx64_clang_ninja.bat  win_msvcx86_clang_ninja.bat  win_vsx64pe_cl_sln.bat  win_vsx86pe_cl_sln.bat
src/: data_types.hpp  demo.cpp  gl_assets.cpp  gl_assets.hpp  gl_layers.cpp  gl_layers.hpp  gl_object.cpp  gl_object.hpp  gl_object3d.cpp  gl_object3d.hpp  gl_scene.cpp  gl_scene.hpp  physics_object.cpp  physics_object.hpp  sdl_framework.cpp  sdl_framework.hpp  sdl_object2d.cpp  sdl_object2d.hpp  sdl_util.c  sdl_util.h
src/example/: circle_collision.cpp  circle_danmaku.cpp  circle_danmaku.html  circle_one.cpp  gl_phong.cpp  gl_phong_demo.cpp  gl_phong_demo.html  gl_shadow_demo.cpp  gl_test.cpp
src/shader/: debug_attitude.frag  debug_attitude.vert  debug_light.frag  debug_light.vert  debug_normal.frag  debug_normal.geom  debug_normal.vert  default.frag  default.vert  depthmap.frag  depthmap.vert  draw_texture.frag  draw_texture.vert  normal_line.vert  phong.frag  phong.vert  shadow.frag  shadow.vert  shadowmap.frag  shadowmap.vert  test.frag
